# evilai

./: .replit  aigen.py  keep_alive.py  main.py  pyproject.toml  requirements.txt  telegram.py
src/bot/: __main__.py
src/bot/handlers/: viewer.py
src/types/: bot.py  data.py  spreadsheets.py
