[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
pillow = "10.4.0"
typing-extensions = "^4.12.2"
aiogram = "3.12.0"
google-generativeai = "^0.7.2"
magic-filter = "1.0.12"
black = "24.8.0"
isort = "5.13.2"
bandit = "1.7.9"
mypy = "1.11.1"
replit = "^4.0.0"
attrs = "^24.2.0"
gspread = "^6.1.2"
flask = "^3.0.3"
aiohttp = "^3.10.5"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"